# plotfi-wheels

./: .gitattributes  triton-3.7.0-cp312-cp312-linux_x86_64.whl  utlx-0.1.0-py3-none-any.whl
scripts/triton/: build_wheel.sh  pack_wheel.py
scripts/utlx/: build_wheel2.sh  pyproject.toml
