[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "utlx"
version = "0.1.0"
description = "uTLX: Triton Language Extensions distributed as a Plugin"
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["python", "tlx/language"]
include = ["utlx", "utlx_plugin", "utlx_plugin.*", "tlx", "tlx.*"]
